Fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -51,17 +51,17 @@ a:hover {
 
 li .current {
   background-color: #0074d9;
-  color: #fff
+  color: #fff;
 }
 
 @media only screen and (min-width: 38em) {
 
-h1 {
+  h1 {
     text-align: left;
-}
+  }
 
-ul {
+  ul {
     text-align: right;
-}
+  }
 
 }
